@@ -235,13 +235,17 @@ The C<void *data> member simply stores the value of the C<data> argument.
 
 =back
 
+Memmbers not explicitly described as accessible must not be
+accessed. Specifically, there is no gurantee that any members will still
+have the value they had when the request was submitted.
+
 The return value of the callback is normally C<0>, which tells libeio to
 continue normally. If a callback returns a nonzero value, libeio will
 stop processing results (in C<eio_poll>) and will return the value to its
 caller.
 
-Memory areas passed to libeio must stay valid as long as a request
-executes, with the exception of paths, which are being copied
+Memory areas passed to libeio wrappers must stay valid as long as a
+request executes, with the exception of paths, which are being copied
 internally. Any memory libeio itself allocates will be freed after the
 finish callback has been called. If you want to manage all memory passed
 to libeio yourself you can use the low-level API.
