@@ -5,6 +5,7 @@ TODO: openbsd requires stdint.h for intptr_t - why posix?
 
 TODO: make mtouch/readdir maybe others cancellable in-request
 TODO: fadvise request
+TODO: ***at/fdopendir via alloc_cwd, free_cwd
 1.0
 	- fix a deadlock where a wakeup signal could be missed when
           a timeout occured at the same time.
